# ai_engineering

./: .gitignore  README.md  WARP.md
agent/: .gitignore  README.md  WARP.md  agent.py  example.py  pyproject.toml  requirements.txt  scraper.py  test.py  test_agent.py
brochure/: EXAMPLE_BROCHURE.md  README.md  WARP.md  __init__.py  brochure.py  example.py  pyproject.toml  requirements.txt  test_brochure.py
chat_completion/: chatcomp.py  gemini_chatcomp.py  ollama_chatcomp.py  openai_chatcomp.py
docs/: course_notes.md  dev_notes.md  user_developer_system_prompts.md
prompt_generator/: AGENTS.md  README.md  example_content.md  prompt_generator.py  prompt_templates.json  pyproject.toml  test_prompt_generator.py
tokens/: README.md  WARP.md  memory_illusion.py  pyproject.toml  test_memory_illusion.py  test_tokens.py  tokens.md  tokens.py
