[project]
name = "brochure"
version = "0.1.0"
description = "AI-powered company brochure generator using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.scripts]
brochure = "brochure.brochure:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
